--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ springdoc.swagger-ui.path=/doc/swagger-ui.html
 
 #seleccionar paquetes, clases a escanear
 #springdoc.packagesToscan=com.cblandon.inversiones.Credito
-springdoc.pathsToMatch=/cliente/**
+springdoc.pathsToMatch=/cliente/**,/credito/**
