--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8091
+#server.port=8091
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:55457/apirest?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
