se complentan sugerencias de codigo en todos los modulos

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,5 +17,5 @@ springdoc.swagger-ui.enable = true
 springdoc.swagger-ui.path=/doc/swagger-ui.html
 
 #seleccionar paquetes, clases a escanear
-#springdoc.packagesToscan=com.cblandon.inversiones.Credito
+#springdoc.packagesToscan=com.cblandon.inversiones.credito
 springdoc.pathsToMatch=/cliente/**,/credito/**
