--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/apirest?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=sasa
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.properties.hibernate.format_sql=true
 # JWT
@@ -17,3 +18,5 @@ springdoc.swagger-ui.path=/doc/swagger-ui.html
 #seleccionar paquetes, clases a escanear
 #springdoc.packagesToscan=com.cblandon.inversiones.credito
 springdoc.pathsToMatch=/cliente/**,/credito/**
+#logs
+logging.file.name=D:/Spring/ProjectoInversion/logs/inversiones.log
