--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,12 @@ springdoc.swagger-ui.path=/doc/swagger-ui.html
 springdoc.pathsToMatch=/cliente/**,/credito/**
 #logs
 logging.file.name=D:/Spring/ProjectoInversion/logs/inversiones.log
+#actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+
+#configuracion archivos
+spring.servlet.multipart.max-file-size=512KB
+spring.servlet.multipart.max-request-size=512KB
+
