--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8091
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/apirest?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/apirest
 spring.datasource.username=root
 spring.datasource.password=sasa
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -20,3 +20,5 @@ springdoc.swagger-ui.path=/doc/swagger-ui.html
 springdoc.pathsToMatch=/cliente/**,/credito/**
 #logs
 logging.file.name=D:/Spring/ProjectoInversion/logs/inversiones.log
+#zona horaria
+spring.jackson.time-zone=America/Bogota
