--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #server.port=8091
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:55457/apirest
+spring.datasource.url=jdbc:mysql://inversiones.railway.internal:3306/apirest
 spring.datasource.username=root
 spring.datasource.password=BBghC2h2e4-66hH1BEGGghgC25Gg5BEA
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
