--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ logging:
 spring:
   datasource:
     password: sasa
-    url: jdbc:mysql://10.102.1.51:3306/blandon
+    url: jdbc:mysql://localhost:3306/blandon
     username: local
   #zona horaria
   jackson:
